--- a/ZeldaLike/ZeldaLike.vcxproj.filters
+++ b/ZeldaLike/ZeldaLike.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="AssetManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gomSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Level.cpp">
