--- a/ZeldaLike/ZeldaLike.vcxproj
+++ b/ZeldaLike/ZeldaLike.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="Physics.h" />
     <ClInclude Include="gomSort.h" />
     <ClInclude Include="PlayerComponent.h" />
+    <ClInclude Include="SwordComponent.h" />
     <ClInclude Include="TextureAtlas.h" />
     <ClInclude Include="TiledMap.h" />
     <ClInclude Include="Utils.h" />
@@ -145,6 +146,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="PlayerComponent.cpp" />
+    <ClCompile Include="SwordComponent.cpp" />
     <ClCompile Include="TextureAtlas.cpp" />
     <ClCompile Include="TiledMap.cpp" />
     <ClCompile Include="Utils.cpp" />
