--- a/ZeldaLike/ZeldaLike.vcxproj.filters
+++ b/ZeldaLike/ZeldaLike.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="InkscapeAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SwordComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Level.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="InkscapeAnimation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SwordComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
