Added ability to stay partly in front or behind objects from a TileMap. Moreover fixed bugs in gomSort, added Physics utility and changed/added getGUID and getGUIDconst

--- a/ZeldaLike/ZeldaLike.vcxproj.filters
+++ b/ZeldaLike/ZeldaLike.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="SwordComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TiledMapRenderComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Level.cpp">
